# Plate-nfo

py_srvcli/: CMakeLists.txt  package.xml  setup.py
py_srvcli/launch/: main_launch.py  run.py
py_srvcli/msg/: PlateData.msg
py_srvcli/py_srvcli/: plate_client.py  plate_server.py  plate_subscriber.py
py_srvcli/srv/: PlateInfo.srv
