<?xml version="1.0"?>
<package format="3">
  <name>py_srvcli</name>
  <version>0.0.0</version>
  <description>Python-based service and client example for ROS2</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Buildtool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build Dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- ROSIDL Interface Declaration -->
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
